.provarCaches/00D5f000005vwGkEAI/objects/rstk__soinvpay__c.object
<CustomObject>
    <description>soinvpay__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>LEFT(rstk__soinvpay_soinv__r.rstk__externalid__c &amp; rstk__soinvpay_invpayid__c, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__soinvpay_soinv__r.rstk__soinv_invoiceno__c &amp; &apos; (&apos; &amp; rstk__soinvpay_invpayid__c &amp; &apos;)&apos;, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_cardtype__c</fullName>
        <label>Card Type ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_cardtypefrm__c</fullName>
        <formula>IF(rstk__soinvpay_cardtype__c == 0, &apos;Visa&apos;,
IF(rstk__soinvpay_cardtype__c == 1, &apos;MasterCard&apos;,
IF(rstk__soinvpay_cardtype__c == 2, &apos;Discover&apos;,
IF(rstk__soinvpay_cardtype__c == 3, &apos;AmericanExpress&apos;,
IF(rstk__soinvpay_cardtype__c == 4, &apos;SwitchMaestro&apos;,
IF(rstk__soinvpay_cardtype__c == 5, &apos;UKMaestro&apos;,
IF(rstk__soinvpay_cardtype__c == 6, &apos;CarteAurore&apos;,
IF(rstk__soinvpay_cardtype__c == 7, &apos;CarteBleue&apos;,
IF(rstk__soinvpay_cardtype__c == 8, &apos;Cofinoga&apos;,
IF(rstk__soinvpay_cardtype__c == 9, &apos;4etoiles&apos;,
IF(rstk__soinvpay_cardtype__c == 10, &apos;CarteAura&apos;,
IF(rstk__soinvpay_cardtype__c == 11, &apos;TarjetaAurora&apos;,
IF(rstk__soinvpay_cardtype__c == 12, &apos;JCB&apos;,
IF(rstk__soinvpay_cardtype__c == 13, &apos;Maestro&apos;, &apos;&apos;))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_error__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_expdate__c</fullName>
        <label>Expiration Date</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_firstname__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_invpayid__c</fullName>
        <label>Payment Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_lastfour__c</fullName>
        <label>Last 4 Characters</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_lastinvpayid__c</fullName>
        <label>Last Invoice Payment Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_lastname__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_payamount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_payamount_rpt__c</fullName>
        <formula>IF (  ISPICKVAL(rstk__soinvpay_soinv__r.rstk__soinv_txntype__c, &apos;Credit Memo&apos;), (rstk__soinvpay_payamount__c * -1), rstk__soinvpay_payamount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount (for Reporting)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_paydate__c</fullName>
        <label>Payment Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_payid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment User ID</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Sales Invoice Payments</relationshipLabel>
        <relationshipName>soinvpaypay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_revdate__c</fullName>
        <label>Z_OBSOLETE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_revdatet__c</fullName>
        <label>Reversal Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Was Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_revid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Reversal User ID</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Sales Invoice Payments (Payment Reversal User ID)</relationshipLabel>
        <relationshipName>soinvpayrev</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_revtxnid__c</fullName>
        <label>Payment Reversal Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_sogateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Gateway</label>
        <referenceTo>rstk__sogateway__c</referenceTo>
        <relationshipLabel>Sales Invoice Payments</relationshipLabel>
        <relationshipName>soinvpays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_soinv__c</fullName>
        <label>Sales Invoice / Memo</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>Sales Invoice Payments</relationshipLabel>
        <relationshipName>soinvpays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_soppy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Payment Detail</label>
        <referenceTo>rstk__soppy__c</referenceTo>
        <relationshipLabel>Sales Invoice Payments</relationshipLabel>
        <relationshipName>soinvpays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soinvpay_status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payment Failed</fullName>
                </value>
                <value>
                    <fullName>Payment Completed</fullName>
                </value>
                <value>
                    <fullName>Reversal Failed</fullName>
                </value>
                <value>
                    <fullName>Reversal Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Invoice Payment</label>
    <listViews>
        <fullName>rstk__RS_Sales_Invoice_Payments</fullName>
        <columns>NAME</columns>
        <columns>rstk__soinvpay_soinv__c</columns>
        <columns>rstk__soinvpay_payamount__c</columns>
        <columns>rstk__soinvpay_sogateway__c</columns>
        <columns>rstk__soinvpay_status__c</columns>
        <columns>rstk__soinvpay_soppy__c</columns>
        <columns>rstk__soinvpay_invpayid__c</columns>
        <columns>rstk__soinvpay_reversed__c</columns>
        <columns>rstk__soinvpay_revdate__c</columns>
        <columns>rstk__soinvpay_revtxnid__c</columns>
        <columns>rstk__soinvpay_lastinvpayid__c</columns>
        <columns>rstk__soinvpay_reconciled__c</columns>
        <columns>rstk__soinvpay_error__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Sales Invoice Payments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>